--- a/_posts/Tutorials/2024-11-01-skybox-tutorial-godot.html
+++ b/_posts/Tutorials/2024-11-01-skybox-tutorial-godot.html
@@ -643,21 +643,21 @@ void sky() {
 
 <h3 id="solar-eclipse">6.1 Solar eclipse</h3>
 
-<p>Currently the sun and moon are both drawn, even if they're on top of each other. To fix this we simply use the inverse (one minus) of the moon's mask to mask out the sun if the moon is in front. Add the following lines to the <cn>Fragment</cn> function below the constellation code.</p>
+<p>Currently the sun and moon are both drawn, even if they're on top of each other. To fix this we simply use the inverse (one minus) of the moon's mask to mask out the sun if the moon is in front. Add the following lines to the <cn>sky</cn> function below the constellation code.</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line=""><code class="language-glsl">// Solar eclipse
-sunColor *= (1 - moonMask);</code></pre></div>
+sunColor *= (1.0 - moonMask);</code></pre></div>
 
 <div class="container image__container round" style="width:100%">
-    <img src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_Eclipses_SolarEclipse_01.png" alt="The solar eclipse. I've lowered the moon radius to 0.067." class="image__caption image__modal">
+    <img src="/assets/posts/tutorials/skybox-tutorial-godot/Skybox_Eclipses_SolarEclipse_01.png" alt="The solar eclipse. I've lowered the moon radius to 0.067." class="image__caption image__modal">
 </div>
 
 <p>I've never seen a total solar eclipse in person and finding reliable images of the sky during one is quite hard, but it seems that the sky becomes darker and the area around the sun seems brighter as a result. In order to implement this we'll use <cn>sunMoonDot</cn> to determine how much of the sun is eclipsed. As a function of this we'll lower the value of <cn>skyColor</cn> and increase the value of <cn>sunColor</cn> (so that the bloom has a greater effect).</p>
 
 <div class="container__code"><pre class="line-numbers round" data-line=""><code class="language-glsl">// Solar eclipse
-float solarEclipse01 = smoothstep(1 - _SunRadius * _SunRadius, 1.0, sunMoonDot);
-skyColor *= lerp(1, 0.4, solarEclipse01);
-sunColor *= (1 - moonMask) * lerp(1, 16, solarEclipse01);</code></pre></div>
+float solarEclipse01 = smoothstep(1.0 - _SunRadius * _SunRadius, 1.0, sunMoonDot);
+skyColor *= mix(1.0, 0.4, solarEclipse01);
+sunColor *= (1.0 - moonMask) * mix(1.0, 16.0, solarEclipse01);</code></pre></div>
 
 
 <p>Notice that we use a similar calculation to the sun's mask, except we use a <cn>smoothstep</cn> so that <cn>solarEclipse01</cn> is 0 up until the centre of the moon overlaps the edge of the sun and becomes 1 when the moon and sun centres align.</p>
@@ -665,7 +665,7 @@ sunColor *= (1 - moonMask) * lerp(1, 16, solarEclipse01);</code></pre></div>
 <p>This is only one way of changing the sky during a solar eclipse, you could of course expand on this using more colours or colour gradients and sample those as function of <cn>solarEclipse01</cn>. Though if you do, be aware that solar eclipses can also occur at night, when you can't see the sun.</p>
 
 <div class="container image__container round" style="width:100%">
-    <img src="/assets/posts/tutorials/skybox-tutorial-part-1/SkyboxP1_Eclipses_SolarEclipse_02.png" alt="The solar eclipse, with lowered skyColor and increased sunColor." class="image__caption image__modal">
+    <img src="/assets/posts/tutorials/skybox-tutorial-godot/Skybox_Eclipses_SolarEclipse_02.png" alt="The solar eclipse, with lowered skyColor and increased sunColor." class="image__caption image__modal">
 </div>
 
 
